--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>russellwashere</title>
+    <link type="text/css" rel="stylesheet" href="stylesheets/main.css" />
 </head>
 <body>
     <h1>Still working on this!</h1>
